[gd_scene load_steps=18 format=3 uid="uid://vksaete574p5"]

[ext_resource type="Script" path="res://scripts/player/Player.gd" id="1_qp76k"]
[ext_resource type="Texture2D" uid="uid://cg44664s6ywtq" path="res://icon.svg" id="2_8ktw0"]
[ext_resource type="Texture2D" uid="uid://d2gj881el3t3f" path="res://assets/rat/RatIdle.png" id="2_30587"]
[ext_resource type="Texture2D" uid="uid://by7ebbyo33m2p" path="res://assets/rat/RatWalk.png" id="3_ctwio"]
[ext_resource type="Script" path="res://scripts/player/Health.gd" id="5_yhv6a"]

[sub_resource type="AtlasTexture" id="AtlasTexture_v3td0"]
atlas = ExtResource("2_30587")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ajjyw"]
atlas = ExtResource("2_30587")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_stjqm"]
atlas = ExtResource("3_ctwio")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_b2o0l"]
atlas = ExtResource("3_ctwio")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_mq7t3"]
atlas = ExtResource("3_ctwio")
region = Rect2(32, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_8e0mj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_v3td0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ajjyw")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_stjqm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b2o0l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mq7t3")
}],
"loop": true,
"name": &"running",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vbaur"]
size = Vector2(40, 10.3889)

[sub_resource type="CircleShape2D" id="CircleShape2D_3awsu"]
radius = 953.333

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hvyej"]
size = Vector2(57.7778, 42.2222)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xsmk2"]
size = Vector2(37.7778, 44.4444)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hhor8"]
bg_color = Color(0.285194, 0.70737, 0.202176, 1)

[sub_resource type="Theme" id="Theme_2x4k7"]
ProgressBar/styles/fill = SubResource("StyleBoxFlat_hhor8")

[node name="Player" type="CharacterBody2D" groups=["player"]]
scale = Vector2(0.45, 0.45)
script = ExtResource("1_qp76k")

[node name="Rat" type="AnimatedSprite2D" parent="."]
texture_filter = 1
scale = Vector2(4, 4)
sprite_frames = SubResource("SpriteFrames_8e0mj")
autoplay = "default"

[node name="Collision" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(2.22222, 27.4167)
shape = SubResource("RectangleShape2D_vbaur")

[node name="RenderDistance" type="Area2D" parent="."]
visible = false
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="RenderDistance"]
shape = SubResource("CircleShape2D_3awsu")

[node name="Bullets" type="Node" parent="."]

[node name="Hand" type="Node2D" parent="."]
position = Vector2(113.333, 0)

[node name="Sprite2D" type="Sprite2D" parent="Hand"]
scale = Vector2(0.378472, 0.378472)
texture = ExtResource("2_8ktw0")

[node name="ShootingPoint" type="Marker2D" parent="Hand"]

[node name="InteractiveTrigger" type="Area2D" parent="." groups=["player"]]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractiveTrigger"]
visible = false
position = Vector2(0, 12.2222)
shape = SubResource("RectangleShape2D_hvyej")

[node name="HandConnect" type="RayCast2D" parent="."]
target_position = Vector2(0, -133.333)

[node name="MainCam" type="Camera2D" parent="."]
process_callback = 0
position_smoothing_enabled = true
position_smoothing_speed = 6.0
drag_left_margin = 0.05
drag_top_margin = 0.05
drag_right_margin = 0.05
drag_bottom_margin = 0.05

[node name="Hitbox" type="Area2D" parent="." groups=["player"]]
collision_layer = 16
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(-2.22222, 11.1111)
shape = SubResource("RectangleShape2D_xsmk2")

[node name="Health" type="Node2D" parent="."]
script = ExtResource("5_yhv6a")

[node name="HealthBar" type="ProgressBar" parent="Health"]
offset_left = -37.7778
offset_top = -31.1111
offset_right = 34.2222
offset_bottom = -17.1111
theme = SubResource("Theme_2x4k7")
show_percentage = false

[connection signal="area_entered" from="RenderDistance" to="." method="_on_render_distance_area_entered"]
[connection signal="area_exited" from="RenderDistance" to="." method="_on_render_distance_area_exited"]
